Add reverse proxy for telewebion

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 server:
   port: 80
 
-logging:
-  level:
-    ROOT: INFO
+logging.level:
+  ROOT: INFO
+
+charon:
+  mappings:
+    - name: telewebion
+      path: /telewebion
+      destinations: https://sa11.telewebion.com #, https://sl11.telewebion.com, https://sa3.telewebion.com, https://st2.telewebion.com
+      retryable: true
