--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
+    implementation 'com.github.mkopylec:charon-spring-boot-starter:3.2.0'
     
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
